--- a/css/style.css
+++ b/css/style.css
@@ -1073,6 +1073,7 @@ h3 {
   padding-bottom: 100px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 @media (max-width: 767px) {
@@ -5927,7 +5928,6 @@ h6 {
     vertical-align: middle;
     border-style: none;
     width: 300px;
-    margin-right: 75px;
 }
 
 @media (max-width: 1200px) {
@@ -5939,4 +5939,16 @@ h6 {
 .inputerror{
   display: none;
   color: rgb(210,0,0);
+}
+
+.questionButton{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.questionSpan{
+  display: flex;
+    white-space: normal;
+    text-align: left;
 }
