--- a/css/style.css
+++ b/css/style.css
@@ -788,7 +788,7 @@ h3 {
   padding: 5px;
   right: 0;
   margin-top: -5px;
-  top: -27px;
+  top: -37px;
 }
 
 /* line 92, C:/Users/SPN Graphics/Desktop/CL September/209/HTML/scss/_slick-nav.scss */
@@ -1100,7 +1100,7 @@ h3 {
 /* line 22, C:/Users/SPN Graphics/Desktop/CL September/209/HTML/scss/_slider.scss */
 .slider_area .title_text {
   position: relative;
-  margin-bottom: 213px;
+  /* margin-bottom: 213px; */
   z-index: 3;
   padding: 55px 8px 12px 0px;
 }
@@ -1233,12 +1233,12 @@ h3 {
 
 /* line 97, C:/Users/SPN Graphics/Desktop/CL September/209/HTML/scss/_slider.scss */
 .slider_area .title_text h3 {
-  font-size: 90px;
+  font-size: 60px;
   font-weight: 700;
   text-transform: capitalize;
-  line-height: 100px;
+  line-height: 70px;
   color: #fff;
-  margin-bottom: 66px;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 767px) {
