--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,37 @@
 #dynamicFormSettings{
   display: none;
 }
+
+#signup-form-details{
+  display: none;
+}
+
+.signup-detail{
+    margin-bottom: 10px;
+}
+
+.signup-detail-highlight{
+    background-color: rgb(240,240,240);
+    border-radius: 10px;
+    border: 1px solid rgb(220,220,220);
+    display: flex;
+    padding: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.signup-detail-breakdown{
+    background-color: rgb(250,250,250);
+    border: 1px solid rgb(220, 220, 220);
+    margin-top: 5px;
+    border-radius: 10px;
+    padding: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    display: none;
+}
