--- a/css/login.css
+++ b/css/login.css
@@ -6,6 +6,10 @@
   display: none;
 }
 
+#dynamic-form-details{
+  display: none;
+}
+
 .signup-detail{
     margin-bottom: 10px;
 }
@@ -34,4 +38,23 @@
     flex-direction: row;
     justify-content: space-between;
     display: none;
+}
+
+.baloonAverage{
+    width: 200px;
+    height: 200px;
+    background-color: lightgray;
+    border: 1px solid gray;
+    border-radius: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 48px;}
+
+.averageContainer{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
+    flex-direction: column;
+    align-items: center;
 }
