--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -1044,6 +1044,12 @@
 .icon-layers2:before {
   content: "\e083";
 }
+.icon-cloud:before {
+  content: "\e901";
+}
+.icon-mobile:before {
+  content: "\e958";
+}
 .icon-stack2:before {
   content: "\e084";
 }
